# rustdesk

./: .gitmodules  Cargo.toml  手动触发配置
.github/workflows/: Build Pipeline.yml  Windows CI.yaml  Windows CI.yml  clear-cache.yml  ru.yml  windows-ci.yml  windowsci.yml
src/: common.rs
