[package]
name = "rustdesk"
version = "1.3.9"
edition = "2021"
build = "build.rs"

[features]
screencapturekit = ["dep:cpal", "cpal/screencapturekit"]
vcpkg = ["magnum-opus/vcpkg", "scrap/vcpkg"]

[dependencies]
scrap = { path = "libs/scrap", features = ["wayland", "vcpkg"] }
hbb_common = { path = "libs/hbb_common" }
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "osx-screencapturekit", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"

[build-dependencies]
vcpkg = "0.2"
